# fastapi_todo

backend/: README.md  main.py  pyproject.toml  sql-todo-app.db
backend/alembic/: env.py
backend/alembic/versions/: 06cd8363946e_init2.py  412ecd5b2954_initial_migration.py  79b0744a4dd2_create_token.py  efb2411ae2d4_init2.py
backend/api/: auth_handler.py
backend/apps/: database.py
backend/apps/models/: models.py
backend/core/: settings.py
backend/db/: database.py  models.py  schemas.py
backend/routers/: to_do.py  users.py
backend/secure/: __init__.py
backend/templates/: base.html  index.html  login.html  register.html
