[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["kylych-dev <mirbekov1kylych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
databases = "^0.9.0"
alembic = "^1.13.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pip = "^24.1.1"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
